--- a/1-containerized-app/.github/workflows/docker-image.yml
+++ b/1-containerized-app/.github/workflows/docker-image.yml
@@ -1,10 +1,7 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  [workflow_dispatch]
 
 jobs:
 
@@ -13,6 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: checkout
+      uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: |
+        docker build . t -mohamedaminechihi/fastapi-app:latest
+    - name: publish
+      run: |
+        docker login -u mohamedaminechihi -p ${{ secrets.GITHUB_TOKEN }}
+        docker push mohamedaminechihi/fastapi-app:latest
