--- a/1-containerized-app/.github/workflows/docker-image.yml
+++ b/1-containerized-app/.github/workflows/docker-image.yml
@@ -1,7 +1,10 @@
 name: Docker Image CI
 
 on:
-  [workflow_dispatch]
+  push:
+    branches: ["docker/workflow"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
 
